<resources>
    <string name="app_name">EnCard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_category">New Category</string>
    <string name="category_name">Category name</string>
    <string name="createCategory">Create</string>
    <string name="new_word">New Word</string>
    <string name="word">Word</string>
    <string name="create">Create</string>
</resources>