<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.addCategory.AddCategoryFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_margin="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_category"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textColor="#505DA6"
            android:textSize="24sp"/>
    </androidx.cardview.widget.CardView>

    <EditText
        android:imeOptions="actionDone"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/category_name"
        android:id="@+id/etCategory"
        android:autofillHints="@string/category_name" />

    <Button
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createCategory"
        android:background="@drawable/circle_btn"
        android:paddingHorizontal="40dp"
        android:textColor="@color/white"
        android:id="@+id/btnSaveCategory"/>



</LinearLayout>